Preprocessing and unstructured.

--- a/glossary.tex
+++ b/glossary.tex
@@ -22,6 +22,7 @@
 \newabbreviation{srm}{SRM}{structural risk minimization}
 \newabbreviation{mlp}{MLP}{multilayer perceptron}
 \newabbreviation{iqr}{IQR}{interquartile range}
+\newabbreviation{cnn}{CNN}{convolutional neural network}
 
 \newglossaryentry{ontology}{%
   name=ontology,
