--- a/references.bib
+++ b/references.bib
@@ -604,3 +604,22 @@ issn = {0893-6080},
 doi = {https://doi.org/10.1016/j.neunet.2015.05.005},
 author = {Freek Stulp and Olivier Sigaud},
 }
+
+@Book{Jurafsky2024,
+  author = "Daniel Jurafsky and James H. Martin",
+  title = "Speech and Language Processing: An Introduction to
+           Natural Language Processing, Computational Linguistics,
+           and Speech Recognition with Language Models",
+  year = "2024",
+  url = {https://web.stanford.edu/~jurafsky/slp3/},
+  note = "Online manuscript released August 20, 2024",
+  edition = 3,
+}
+
+@book{Szeliski2022,
+  title={Computer vision: algorithms and applications},
+  author={Szeliski, Richard},
+  year={2022},
+  edition={2},
+  publisher={Springer Nature}
+}
