--- a/references.bib
+++ b/references.bib
@@ -616,10 +616,22 @@ author = {Freek Stulp and Olivier Sigaud},
   edition = 3,
 }
 
+@book{Jurafsky2008,
+  author = {Daniel Jurafsky and James H. Martin},
+  title = {Speech and Language Processing},
+  subtitle = {An Introduction to Natural Language Processing, Computational Linguistics, and Speech Recognition},
+  year = {2008},
+  publisher = {Prentice Hall},
+  address = {Hoboken, NJ, USA},
+  edition = 2,
+}
+
 @book{Szeliski2022,
-  title={Computer vision: algorithms and applications},
+  title={Computer vision},
+  subtitle={Algorithms and applications},
   author={Szeliski, Richard},
   year={2022},
   edition={2},
-  publisher={Springer Nature}
+  publisher={Springer Nature},
+  url={https://szeliski.org/Book/}
 }
