--- a/main.tex
+++ b/main.tex
@@ -37,6 +37,7 @@
 \DeclareMathOperator{\E}{E}
 \DeclareMathOperator{\Var}{Var}
 \DeclareMathOperator{\sign}{sign}
+\DeclareMathOperator{\clamp}{clamp}
 
 \usepackage[Bjornstrup]{fncychap} % must come before cleveref to avoid break appendix name
 \usepackage{cleveref}
