Finished dimensionality reduction.

--- a/glossary.tex
+++ b/glossary.tex
@@ -23,6 +23,7 @@
 \newabbreviation{mlp}{MLP}{multilayer perceptron}
 \newabbreviation{iqr}{IQR}{interquartile range}
 \newabbreviation{cnn}{CNN}{convolutional neural network}
+\newabbreviation{pca}{PCA}{principal component analysis}
 
 \newglossaryentry{ontology}{%
   name=ontology,
